# RAMS

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: index.py
docs/: ARCHITECTURE.md  DEPLOY_VERCEL.md  INDIAN_RAMS_STRATEGY.md  RAMS_Client_Presentation.pptx  USER_GUIDE.md
examples/: budget_network.csv  fwd_sections_nh152d.csv  fwd_sections_sample.csv  sample_network.csv  sample_network.xml  sample_observations.csv
rams/: __init__.py  api.py  batch.py  calibrate.py  cli.py  config.py  design.py  distress.py  engine.py  export.py  fwd.py  hdm4.py  iitpave.py  iitpave_engine.py  ingest.py  lca.py  lifecycle.py  maintenance.py  mci.py  models.py  morth.py  optimize.py  pbmc.py  pdfdoc.py  ppt.py  report.py  residual.py  sections.py  server.py  survey.py  traffic.py  triggers.py
rams/data/iitpave_reference/: README.md  case_a.out  case_b.in  case_b.out  case_c.in  case_c.out  gauss.qua
scripts/: make_ppt.py  md_to_pdf.py
tests/: test_calibrate.py  test_design.py  test_distress.py  test_engine.py  test_fwd.py  test_fwd_iitpave.py  test_hdm4.py  test_iitpave.py  test_iitpave_engine.py  test_ingest.py  test_lca.py  test_lifecycle.py  test_maintenance.py  test_multifile.py  test_optimize.py  test_pbmc.py  test_pdfdoc.py  test_ppt.py  test_report.py  test_sections.py  test_server_spa.py  test_survey.py  test_traffic.py  test_validation.py  test_xlsx.py
