[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rams-pavement-engine"
version = "1.0.0"
description = "Deterministic Indian pavement deterioration & IRC:82 PCI forecasting engine"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["pavement", "RAMS", "IRC82", "MoRTH", "asset-management", "infrastructure"]
dependencies = []  # core is standard-library only

[project.optional-dependencies]
accel = ["numpy>=1.21", "pandas>=1.3"]
# Optional, more robust PDF text extraction. The stdlib loader already handles
# simple, digitally-generated table PDFs with no third-party dependency; install
# this extra for arbitrary producers/layouts.
pdf = ["pypdf>=4.0"]

[project.scripts]
rams = "rams.cli:main"

[tool.setuptools.packages.find]
include = ["rams*"]

[tool.setuptools.package-data]
# Bundled IITPAVE reference I/O used to validate the layered-elastic engine.
rams = ["data/iitpave_reference/*"]
